--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"astro": "^5.12.0",
+		"astro-vtbot": "^2.1.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwindcss": "^4.1.11"
