--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"@types/react-dom": "^19.1.6",
 		"astro": "^5.12.0",
 		"astro-vtbot": "^2.1.6",
+		"clsx": "^2.1.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
