--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"astro": "^5.12.0",
 		"astro-vtbot": "^2.1.6",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.525.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.3.1",
