--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"astro": "^5.12.0",
 		"astro-vtbot": "^2.1.6",
 		"clsx": "^2.1.1",
+		"gsap": "^3.13.0",
 		"lucide-react": "^0.525.0",
 		"motion": "^12.23.6",
 		"react": "^19.1.0",
