--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write"
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.9.4",
 		"@astrojs/react": "^4.3.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/react": "^19.1.8",
@@ -26,6 +27,7 @@
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3",
 		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
