--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
+		"@astrojs/mdx": "^4.3.1",
 		"@astrojs/react": "^4.3.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/react": "^19.1.8",
