--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/mdx": "^4.3.1",
 		"@astrojs/react": "^4.3.0",
+		"@astrojs/vercel": "^8.2.5",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
