--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 		"@astrojs/mdx": "^4.3.1",
 		"@astrojs/react": "^4.3.0",
 		"@astrojs/vercel": "^8.2.5",
+		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"astro": "^5.12.0",
 		"astro-vtbot": "^2.1.6",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"gsap": "^3.13.0",
 		"lucide-react": "^0.525.0",
@@ -44,6 +46,7 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-organize-imports": "^4.1.0",
-		"prettier-plugin-tailwindcss": "^0.6.14"
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"tw-animate-css": "^1.3.6"
 	}
 }
