--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/mdx": "^4.3.1",
 		"@astrojs/react": "^4.3.0",
 		"@astrojs/vercel": "^8.2.5",
+		"@gsap/react": "^2.1.2",
 		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/react": "^19.1.8",
@@ -30,6 +31,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-use-measure": "^2.1.7",
+		"tailwind-clamp": "^4.1.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3",
