--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-use-measure": "^2.1.7",
+		"sharp": "^0.34.3",
 		"tailwind-clamp": "^4.1.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
