--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"astro": "^5.12.0",
+		"astro-cloudinary": "^1.3.4",
 		"astro-vtbot": "^2.1.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
