--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3",
+		"usehooks-ts": "^3.1.1",
 		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
