--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-react-compiler": "19.1.0-rc.2",
 		"eslint-plugin-react-hooks": "^5.2.0",
+		"gray-matter": "^4.0.3",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
+		"tinyglobby": "^0.2.14",
 		"tw-animate-css": "^1.3.6"
 	}
 }
